--- a/icfp2008.cabal
+++ b/icfp2008.cabal
@@ -20,12 +20,15 @@ executable icfp08
   main-is:             Main.hs
   other-modules:       Parser
                        Message
+                       State
   -- other-extensions:
   build-depends:       base >=4.1 && <4.20,
                        bytestring,
                        network,
                        text,
                        attoparsec,
-                       lens
+                       lens,
+                       containers,
+                       mtl
   -- hs-source-dirs:
   default-language:    Haskell2010
