--- a/icfp2008.cabal
+++ b/icfp2008.cabal
@@ -21,6 +21,7 @@ executable icfp08
   other-modules:       Parser
                        Message
                        State
+                       Point
   -- other-extensions:
   build-depends:       base >=4.1 && <4.20,
                        bytestring,
@@ -29,6 +30,7 @@ executable icfp08
                        attoparsec,
                        lens,
                        containers,
-                       mtl
+                       mtl,
+                       array
   -- hs-source-dirs:
   default-language:    Haskell2010
