--- a/icfp2008.cabal
+++ b/icfp2008.cabal
@@ -31,6 +31,7 @@ executable icfp08
                        lens,
                        containers,
                        mtl,
-                       array
+                       array,
+                       fgl
   -- hs-source-dirs:
   default-language:    Haskell2010
